[gd_scene load_steps=13 format=3 uid="uid://c5mxdkbljpq8j"]

[ext_resource type="Script" uid="uid://dmxlwah1hvr5y" path="res://scenes/player/player_character.gd" id="1_56udc"]
[ext_resource type="Shape2D" uid="uid://dxnajkbumilxf" path="res://resources/player_shape.tres" id="2_e1j0t"]
[ext_resource type="Texture2D" uid="uid://cedyrtuag5yu" path="res://images/player/owlet-normal.png" id="3_s66ro"]

[sub_resource type="Animation" id="Animation_s66ro"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 5)]
}

[sub_resource type="Animation" id="Animation_f85ux"]
resource_name = "falling"
length = 0.20000668
step = 0.06666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [22, 23, 24]
}

[sub_resource type="Animation" id="Animation_t1eku"]
resource_name = "hurt"
length = 0.73334
step = 0.06666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.20000002, 0.33333334, 0.4666667, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_e1j0t"]
resource_name = "idle"
length = 2.0000067
loop_mode = 1
step = 0.06666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.4901161e-08, 0.06666667, 0.6666667, 0.73333335),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [55, 56, 57, 54]
}

[sub_resource type="Animation" id="Animation_ocp37"]
resource_name = "jumping"
length = 0.13333668
step = 0.06666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-1.4901161e-08, 0.06666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [20, 21]
}

[sub_resource type="Animation" id="Animation_ryjgy"]
resource_name = "punch_1"
length = 0.26667336
step = 0.06666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [27, 29, 30]
}

[sub_resource type="Animation" id="Animation_wvac4"]
resource_name = "punch_2"
length = 0.40000668
step = 0.06666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-1.4901161e-08, 0.06666667, 0.13333334, 0.2, 0.33333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [27, 28, 41, 31, 32]
}

[sub_resource type="Animation" id="Animation_0icub"]
resource_name = "running"
length = 0.40000668
loop_mode = 1
step = 0.06666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.2, 0.26666668, 0.33333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n4nw3"]
_data = {
&"RESET": SubResource("Animation_s66ro"),
&"falling": SubResource("Animation_f85ux"),
&"hurt": SubResource("Animation_t1eku"),
&"idle": SubResource("Animation_e1j0t"),
&"jumping": SubResource("Animation_ocp37"),
&"punch_1": SubResource("Animation_ryjgy"),
&"punch_2": SubResource("Animation_wvac4"),
&"running": SubResource("Animation_0icub")
}

[node name="PlayerCharacter" type="CharacterBody2D" groups=["player"]]
z_index = 10
collision_mask = 2
slide_on_ceiling = false
floor_block_on_wall = false
floor_snap_length = 2.0
safe_margin = 0.2
script = ExtResource("1_56udc")

[node name="PhysicsShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = ExtResource("2_e1j0t")
debug_color = Color(0, 0.57546985, 0.82127774, 0.41960785)

[node name="InteractionArea" type="Area2D" parent="."]
collision_mask = 108

[node name="Shape" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0, -12)
shape = ExtResource("2_e1j0t")
debug_color = Color(0, 0.57546985, 0.82127774, 0.41960785)

[node name="Sprite" type="Node2D" parent="."]

[node name="Sprites" type="Sprite2D" parent="Sprite"]
position = Vector2(0, -16)
texture = ExtResource("3_s66ro")
hframes = 9
vframes = 18
frame = 45

[node name="Anim" type="AnimationPlayer" parent="Sprite"]
root_node = NodePath("../Sprites")
libraries = {
&"": SubResource("AnimationLibrary_n4nw3")
}
autoplay = "idle"

[node name="ProjectileAreas" type="Node2D" parent="."]

[node name="Punch" type="Marker2D" parent="ProjectileAreas"]
position = Vector2(15, -10)

[node name="Punch2" type="Marker2D" parent="ProjectileAreas"]
position = Vector2(12, -10)

[node name="EffectAreas" type="Node2D" parent="."]

[node name="Ground" type="Marker2D" parent="EffectAreas"]

[node name="SafeGround" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="SafeGround"]
position = Vector2(-7, -1)
target_position = Vector2(0, 10)
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="SafeGround"]
position = Vector2(7, -1)
target_position = Vector2(0, 10)
collision_mask = 2

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="DashGhostCreateTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="JumpTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="HurtTimer" type="Timer" parent="."]
one_shot = true

[node name="InputDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="InvulnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
